[package]
name = "node-runtime"
version = "0.1.0"
authors = ["nuts.finance"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/nutsfinance/stable-asset"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }

pallet-aura = { version = "3.0.0", default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = "v3.0.0" }
pallet-assets = { version = "3.0.0", default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = "v3.0.0" }
pallet-balances = { version = "3.0.0", default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = "v3.0.0" }
frame-support = { version = "3.0.0", default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = "v3.0.0" }
pallet-grandpa = { version = "3.0.0", default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = "v3.0.0" }
pallet-randomness-collective-flip = { version = "3.0.0", default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = "v3.0.0" }
pallet-sudo = { version = "3.0.0", default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = "v3.0.0" }
frame-system = { version = "3.0.0", default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = "v3.0.0" }
pallet-timestamp = { version = "3.0.0", default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = "v3.0.0" }
pallet-transaction-payment = { version = "3.0.0", default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = "v3.0.0" }
frame-executive = { version = "3.0.0", default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = "v3.0.0" }
serde = { version = "1.0.101", optional = true, features = ["derive"] }
sp-api = { version = "3.0.0", default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = "v3.0.0" }
sp-block-builder = { git = 'https://github.com/paritytech/substrate.git', tag = "v3.0.0", default-features = false, version = "3.0.0"}
sp-consensus-aura = { version = "0.9.0", default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = "v3.0.0" }
sp-core = { version = "3.0.0", default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = "v3.0.0" }
sp-inherents = { git = 'https://github.com/paritytech/substrate.git', tag = "v3.0.0", default-features = false, version = "3.0.0"}
sp-offchain = { version = "3.0.0", default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = "v3.0.0" }
sp-runtime = { version = "3.0.0", default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = "v3.0.0" }
sp-session = { version = "3.0.0", default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = "v3.0.0" }
sp-std = { version = "3.0.0", default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = "v3.0.0" }
sp-transaction-pool = { version = "3.0.0", default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = "v3.0.0" }
sp-version = { version = "3.0.0", default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = "v3.0.0" }
sp-io = { version = "3.0.0", default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = "v3.0.0" }

# Used for the node's RPCs
frame-system-rpc-runtime-api = { version = "3.0.0", default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = "v3.0.0" }
pallet-transaction-payment-rpc-runtime-api = { version = "3.0.0", default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = "v3.0.0" }

nutsfinance-stable-asset = { version = "0.1.0", default-features = false, path = "../pallets/stable-asset", package = "nutsfinance-stable-asset" }

[build-dependencies]
substrate-wasm-builder = { version = "4.0.0", git = 'https://github.com/paritytech/substrate.git', tag = "v3.0.0" }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-executive/std",
	"frame-support/std",
	"pallet-aura/std",
	"pallet-assets/std",
	"pallet-balances/std",
	"pallet-grandpa/std",
	"pallet-randomness-collective-flip/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"serde",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"sp-io/std",
	"frame-system/std",
	"frame-system-rpc-runtime-api/std",
	"nutsfinance-stable-asset/std",
]
