[package]
name = "node-runtime"
version = "0.1.0"
authors = ["nuts.finance"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/nutsfinance/stable-asset"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }

pallet-aura = { default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = "1d7f6e12c651d776fc0dc1adefd007bb60f60b63" }
pallet-assets = { default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = "1d7f6e12c651d776fc0dc1adefd007bb60f60b63" }
pallet-balances = { default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = "1d7f6e12c651d776fc0dc1adefd007bb60f60b63" }
frame-support = { default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = "1d7f6e12c651d776fc0dc1adefd007bb60f60b63" }
pallet-grandpa = { default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = "1d7f6e12c651d776fc0dc1adefd007bb60f60b63" }
pallet-randomness-collective-flip = { default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = "1d7f6e12c651d776fc0dc1adefd007bb60f60b63" }
pallet-sudo = { default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = "1d7f6e12c651d776fc0dc1adefd007bb60f60b63" }
frame-system = { default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = "1d7f6e12c651d776fc0dc1adefd007bb60f60b63" }
pallet-timestamp = { default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = "1d7f6e12c651d776fc0dc1adefd007bb60f60b63" }
pallet-transaction-payment = { default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = "1d7f6e12c651d776fc0dc1adefd007bb60f60b63" }
frame-executive = { default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = "1d7f6e12c651d776fc0dc1adefd007bb60f60b63" }
serde = { version = "1.0.101", optional = true, features = ["derive"] }
sp-api = { default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = "1d7f6e12c651d776fc0dc1adefd007bb60f60b63" }
sp-block-builder = { git = 'https://github.com/paritytech/substrate.git', rev = "1d7f6e12c651d776fc0dc1adefd007bb60f60b63", default-features = false, version = "3.0.0"}
sp-consensus-aura = { default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = "1d7f6e12c651d776fc0dc1adefd007bb60f60b63" }
sp-core = { default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = "1d7f6e12c651d776fc0dc1adefd007bb60f60b63" }
sp-inherents = { git = 'https://github.com/paritytech/substrate.git', rev = "1d7f6e12c651d776fc0dc1adefd007bb60f60b63", default-features = false, version = "3.0.0"}
sp-offchain = { default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = "1d7f6e12c651d776fc0dc1adefd007bb60f60b63" }
sp-runtime = { default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = "1d7f6e12c651d776fc0dc1adefd007bb60f60b63" }
sp-session = { default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = "1d7f6e12c651d776fc0dc1adefd007bb60f60b63" }
sp-std = { default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = "1d7f6e12c651d776fc0dc1adefd007bb60f60b63" }
sp-transaction-pool = { default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = "1d7f6e12c651d776fc0dc1adefd007bb60f60b63" }
sp-version = { default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = "1d7f6e12c651d776fc0dc1adefd007bb60f60b63" }
sp-io = { default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = "1d7f6e12c651d776fc0dc1adefd007bb60f60b63" }

# Used for the node's RPCs
frame-system-rpc-runtime-api = { default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = "1d7f6e12c651d776fc0dc1adefd007bb60f60b63" }
pallet-transaction-payment-rpc-runtime-api = { default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = "1d7f6e12c651d776fc0dc1adefd007bb60f60b63" }

nutsfinance-stable-asset = { version = "0.1.0", default-features = false, path = "../pallets/stable-asset", package = "nutsfinance-stable-asset" }

[build-dependencies]
substrate-wasm-builder = { git = 'https://github.com/paritytech/substrate.git', rev = "1d7f6e12c651d776fc0dc1adefd007bb60f60b63" }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-executive/std",
	"frame-support/std",
	"pallet-aura/std",
	"pallet-assets/std",
	"pallet-balances/std",
	"pallet-grandpa/std",
	"pallet-randomness-collective-flip/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"serde",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"sp-io/std",
	"frame-system/std",
	"frame-system-rpc-runtime-api/std",
	"nutsfinance-stable-asset/std",
]
