[package]
name = "node"
version = "0.1.0"
authors = ["nuts.finance"]
description = "Example node to run stable-asset pallet"
edition = "2021"
license = "Apache-2.0"
build = "build.rs"
repository = "https://github.com/nutsfinance/stable-asset"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "node"

[dependencies]
structopt = "0.3.25"

sc-cli = {git = 'https://github.com/paritytech/substrate.git', rev = "fcc54a72973d03afe7bf9e3ef2736050b3f33465", features = ["wasmtime"] }
sp-core = { git = 'https://github.com/paritytech/substrate.git', rev = "fcc54a72973d03afe7bf9e3ef2736050b3f33465" }
sc-executor = {git = 'https://github.com/paritytech/substrate.git', rev = "fcc54a72973d03afe7bf9e3ef2736050b3f33465", features = ["wasmtime"] }
sc-service = {git = 'https://github.com/paritytech/substrate.git', rev = "fcc54a72973d03afe7bf9e3ef2736050b3f33465", features = ["wasmtime"] }
sc-telemetry = { git = 'https://github.com/paritytech/substrate.git', rev = "fcc54a72973d03afe7bf9e3ef2736050b3f33465" }
sc-keystore = { git = 'https://github.com/paritytech/substrate.git', rev = "fcc54a72973d03afe7bf9e3ef2736050b3f33465" }
sp-inherents = { git = 'https://github.com/paritytech/substrate.git', rev = "fcc54a72973d03afe7bf9e3ef2736050b3f33465" }
sc-transaction-pool = { git = 'https://github.com/paritytech/substrate.git', rev = "fcc54a72973d03afe7bf9e3ef2736050b3f33465" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/substrate", rev = "fcc54a72973d03afe7bf9e3ef2736050b3f33465" }
sc-consensus-aura = {git = 'https://github.com/paritytech/substrate.git', rev = "fcc54a72973d03afe7bf9e3ef2736050b3f33465" }
sp-consensus-aura = {git = 'https://github.com/paritytech/substrate.git', rev = "fcc54a72973d03afe7bf9e3ef2736050b3f33465" }
sp-consensus = {git = 'https://github.com/paritytech/substrate.git', rev = "fcc54a72973d03afe7bf9e3ef2736050b3f33465" }
sc-consensus = {git = 'https://github.com/paritytech/substrate.git', rev = "fcc54a72973d03afe7bf9e3ef2736050b3f33465" }
sc-finality-grandpa = {git = 'https://github.com/paritytech/substrate.git', rev = "fcc54a72973d03afe7bf9e3ef2736050b3f33465" }
sp-finality-grandpa = { git = 'https://github.com/paritytech/substrate.git', rev = "fcc54a72973d03afe7bf9e3ef2736050b3f33465" }
sc-client-api = { git = 'https://github.com/paritytech/substrate.git', rev = "fcc54a72973d03afe7bf9e3ef2736050b3f33465" }
sp-runtime = { git = 'https://github.com/paritytech/substrate.git', rev = "fcc54a72973d03afe7bf9e3ef2736050b3f33465" }
sp-timestamp = { git = 'https://github.com/paritytech/substrate.git', rev = "fcc54a72973d03afe7bf9e3ef2736050b3f33465" }

# These dependencies are used for the node template's RPCs
jsonrpc-core = "18.0.0"
sc-rpc = { git = 'https://github.com/paritytech/substrate.git', rev = "fcc54a72973d03afe7bf9e3ef2736050b3f33465" }
sp-api = { git = 'https://github.com/paritytech/substrate.git', rev = "fcc54a72973d03afe7bf9e3ef2736050b3f33465" }
sc-rpc-api = {git = 'https://github.com/paritytech/substrate.git', rev = "fcc54a72973d03afe7bf9e3ef2736050b3f33465" }
sp-blockchain = { git = 'https://github.com/paritytech/substrate.git', rev = "fcc54a72973d03afe7bf9e3ef2736050b3f33465" }
sp-block-builder = { git = 'https://github.com/paritytech/substrate.git', rev = "fcc54a72973d03afe7bf9e3ef2736050b3f33465" }
sc-basic-authorship = {git = 'https://github.com/paritytech/substrate.git', rev = "fcc54a72973d03afe7bf9e3ef2736050b3f33465" }
substrate-frame-rpc-system = { git = 'https://github.com/paritytech/substrate.git', rev = "fcc54a72973d03afe7bf9e3ef2736050b3f33465" }
pallet-transaction-payment-rpc = { git = 'https://github.com/paritytech/substrate.git', rev = "fcc54a72973d03afe7bf9e3ef2736050b3f33465" }

# These dependencies are used for runtime benchmarking
frame-benchmarking = { git = 'https://github.com/paritytech/substrate.git', rev = "fcc54a72973d03afe7bf9e3ef2736050b3f33465" }
frame-benchmarking-cli = { git = 'https://github.com/paritytech/substrate.git', rev = "fcc54a72973d03afe7bf9e3ef2736050b3f33465" }


node-runtime = { version = "0.1.0", path = "../runtime" }

[build-dependencies]
substrate-build-script-utils = { git = 'https://github.com/paritytech/substrate.git', rev = "fcc54a72973d03afe7bf9e3ef2736050b3f33465" }

[features]
default = []
